deployments/snapserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapserver
  namespace: snapserver
spec:
  type: LoadBalancer
  loadBalancerIP: ${load_balancer_ip}
  ports:
    - port: 1704
      targetPort: 1704
      protocol: TCP
      name: port-1704
    - port: 1705
      targetPort: 1705
      protocol: TCP
      name: port-1705
    - port: 1780
      targetPort: 1780
      protocol: TCP
      name: port-1780%{ for port in additional_ports }
    - port: ${port}
      targetPort: ${port}
      protocol: TCP
      name: port-${port}%{ endfor }
  selector:
    app: snapserver
