deployments/snapserver-ingress-1704.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: snapserver-1704
  namespace: snapserver
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - snapserver1704
  routes:
    - match: Host(`${snapserver_host}`)
      kind: Rule
      services:
        - name: snapserver
          port: 1704
