deployments/snapserver-ingress-1705.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: snapserver-1705
  namespace: snapserver
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - snapserver1705
  routes:
    - match: Host(`${snapserver_host}`)
      kind: Rule
      services:
        - name: snapserver
          port: 1705
