deployments/snapserver-ingress-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: snapserver-web
  namespace: snapserver
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${snapserver_host}`)
      kind: Rule
      services:
        - name: snapserver
          port: 1780
  tls:
    secretName: snapserver-${cert_manager_cloudflare_dns_secret_name_prefix}-${cert_manager_issuer_environment}-tls
